--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+core.darwin-x64.node
+index.js
+index.d.ts
+
 # Npm
 node_modules/
