--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -144,7 +144,7 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  build-freebsd:
+  # build-freebsd:
     runs-on: macos-10.15
     name: Build FreeBSD
     steps:
@@ -379,44 +379,44 @@ jobs:
   #           apk add nodejs npm yarn
   #           yarn test
   # test-linux-arm-gnueabihf-binding:
-    name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        node:
-          - '12'
-          - '14'
-          - '16'
-    runs-on: ubuntu-latest
-    steps:
-      - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
-      - uses: actions/checkout@v3
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: bindings-armv7-unknown-linux-gnueabihf
-          path: .
-      - name: List packages
-        run: ls -R .
-        shell: bash
-      - name: Cache NPM dependencies
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: npm-cache-test-linux-arm-gnueabihf-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
-      - name: Install dependencies
-        run: yarn install --ignore-scripts --ignore-platform --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
-      - name: Setup and run tests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ghcr.io/napi-rs/napi-rs/nodejs:armhf-${{ matrix.node }}
-          options: '-v ${{ github.workspace }}:/build -w /build'
-          run: |
-            set -e
-            yarn test
-            ls -la
+    # name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
+    # needs:
+    #   - build
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     node:
+    #       - '12'
+    #       - '14'
+    #       - '16'
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    #   - uses: actions/checkout@v3
+    #   - name: Download artifacts
+    #     uses: actions/download-artifact@v3
+    #     with:
+    #       name: bindings-armv7-unknown-linux-gnueabihf
+    #       path: .
+    #   - name: List packages
+    #     run: ls -R .
+    #     shell: bash
+    #   - name: Cache NPM dependencies
+    #     uses: actions/cache@v2
+    #     with:
+    #       path: node_modules
+    #       key: npm-cache-test-linux-arm-gnueabihf-${{ matrix.node }}-${{ hashFiles('yarn.lock') }}
+    #   - name: Install dependencies
+    #     run: yarn install --ignore-scripts --ignore-platform --frozen-lockfile --registry https://registry.npmjs.org --network-timeout 300000
+    #   - name: Setup and run tests
+    #     uses: addnab/docker-run-action@v3
+    #     with:
+    #       image: ghcr.io/napi-rs/napi-rs/nodejs:armhf-${{ matrix.node }}
+    #       options: '-v ${{ github.workspace }}:/build -w /build'
+    #       run: |
+    #         set -e
+    #         yarn test
+    #         ls -la
   publish:
     name: Publish
     runs-on: ubuntu-latest
