--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -144,7 +144,7 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  # build-freebsd:
+  build-freebsd:
     runs-on: macos-10.15
     name: Build FreeBSD
     steps:
