--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -420,6 +420,8 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    needs:
+        - build
     # needs:
     #   - build-freebsd
     #   - test-macOS-windows-binding
