chore: add @swc-node/register

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@swc-node/register": "^1.6.5"
+  }
 }
