--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "test": "ava",
-    "artifacts": "yarn workspaces foreach --no-private run artifacts",
-    "build": "yarn workspaces foreach --no-private -j 1 run build",
-    "build:workspace": ""
+    "artifacts": "yarn workspace @eschecker/internal-core artifacts",
+    "build": "yarn workspace @eschecker/internal-core build",
+    "build:workspace": "",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@swc-node/register": "^1.6.5"
-  }
+    "@napi-rs/cli": "^2.16.1",
+    "@swc-node/register": "^1.6.5",
+    "@swc/core": "^1.3.62",
+    "ava": "^5.3.0",
+    "typescript": "^5.1.3"
+  },
+  "packageManager": "yarn@3.6.0"
 }
