--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
             target: x86_64-apple-darwin
             build: |
               yarn build
-              strip -x *.node
+              strip -x packages/*/*.node
           - host: windows-latest
             build: yarn build
             target: x86_64-pc-windows-msvc
@@ -41,11 +41,11 @@ jobs:
             build: |-
               set -e &&
               yarn build --target x86_64-unknown-linux-gnu &&
-              strip *.node
+              strip -x packages/*/*.node
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-alpine
-            build: set -e && yarn build && strip *.node
+            build: set -e && yarn build && strip -x packages/*/*.node
           - host: macos-latest
             target: aarch64-apple-darwin
             build: |
