--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -439,7 +439,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bindings-universal-apple-darwin
-          path: ${{ env.APP_NAME }}.*.node
+          path: packages/*/*.node
           if-no-files-found: error
   publish:
     name: Publish
