--- a/packages/internal-core/package.json
+++ b/packages/internal-core/package.json
@@ -27,6 +27,7 @@
     "artifacts": "napi artifacts -d ../../artifacts",
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
+    "publish": "npm publish --access public",
     "prepublishOnly": "napi prepublish -t npm",
     "universal": "napi universal",
     "version": "napi version"
