--- a/.github/workflows/Rust-Publish.yml
+++ b/.github/workflows/Rust-Publish.yml
@@ -5,8 +5,8 @@ env:
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 'on':
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
     tags-ignore:
       - '**'
     paths-ignore:
@@ -483,7 +483,7 @@ jobs:
       - name: Publish
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          yarn workspace @eschecker/internal-core publish"
+          yarn workspace @eschecker/internal-core publish
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
