--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "artifacts": "yarn workspace @eschecker/internal-core artifacts",
     "build": "yarn workspace @eschecker/internal-core build",
+    "version": "bumpp package.json packages/*/package.json --commit --push --tag",
     "build:workspace": "",
     "test": "ava"
   },
@@ -20,6 +21,7 @@
     "@swc-node/register": "^1.6.5",
     "@swc/core": "^1.3.62",
     "ava": "^5.3.0",
+    "bumpp": "^9.1.1",
     "typescript": "^5.1.3"
   },
   "packageManager": "yarn@3.6.0"
