--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eschecker/core",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.0",
   "main": "index.js",
   "types": "index.d.ts",
   "license": "MIT",
