--- a/.github/workflows/Rust-Publish.yml
+++ b/.github/workflows/Rust-Publish.yml
@@ -475,7 +475,7 @@ jobs:
       - name: Publish
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-          yarn workspace @eschecker/internal-core publish
+          yarn workspace @eschecker/internal-core release
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
