--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "artifacts": "yarn workspace @eschecker/internal-core artifacts",
     "build": "yarn workspace @eschecker/internal-core build",
+    "build:packages": "esmo ./scripts/build.ts",
     "ci": "bumpp package.json packages/*/package.json --commit --push --tag",
     "build:workspace": "",
     "test": "ava"
@@ -20,8 +21,14 @@
     "@napi-rs/cli": "^2.16.1",
     "@swc-node/register": "^1.6.5",
     "@swc/core": "^1.3.62",
+    "@types/node": "^20.3.0",
     "ava": "^5.3.0",
     "bumpp": "^9.1.1",
+    "chalk": "^5.2.0",
+    "esmo": "^0.16.3",
+    "inquirer": "^9.2.7",
+    "minimist": "^1.2.8",
+    "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
   "packageManager": "yarn@3.6.0"
