--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,27 @@
 {
-  "compilerOptions": {},
-  "include": ["packages"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
+    "sourceMap": false,
+    "target": "ES2016",
+    "module": "ESNext",
+    "moduleResolution": "NodeNext",
+    "allowJs": false,
+    "strict": true,
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "removeComments": true,
+    "jsx": "preserve",
+    "lib": ["esnext", "dom"],
+    "types": ["node"],
+    "rootDir": ".",
+    "declaration": true,
+    "paths": {
+      "@eschecker/*": ["packages/*/src"]
+    },
+  },
+  "include": ["packages/*/src/"],
+  "exclude": ["packages/*/dist", "packages/*/__test__"]
 }
