--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "artifacts": "yarn workspace @eschecker/internal-core artifacts",
     "build": "yarn workspace @eschecker/internal-core build",
-    "build:package": "esmo ./scripts/build.ts",
-    "build:packages": "esmo ./scripts/build.ts --all",
+    "build:package": "esno ./scripts/build.ts",
+    "build:packages": "esno ./scripts/build.ts --all",
     "ci": "bumpp package.json packages/*/package.json --commit --push --tag",
     "test": "ava"
   },
@@ -25,7 +25,7 @@
     "ava": "^5.3.0",
     "bumpp": "^9.1.1",
     "chalk": "^5.2.0",
-    "esmo": "^0.16.3",
+    "esno": "^0.16.3",
     "inquirer": "^9.2.7",
     "minimist": "^1.2.8",
     "tsup": "^6.7.0",
