--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "baseUrl": ".",
     "outDir": "dist",
     "sourceMap": false,
-    "target": "ES2016",
+    "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "node16",
     "allowJs": false,
     "strict": true,
     "noUnusedLocals": true,
