--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
     "node": ">= 10"
   },
   "scripts": {
-    "publish": "npm publish --access public"
+    "release": "npm publish --access public"
   },
   "dependencies": {
     "@eschecker/internal-core": "workspace:*"
