--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,12 @@
     }
   },
   "license": "MIT",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "engines": {
     "node": ">= 10"
   },
