--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,6 @@
     "release": "npm publish --access public"
   },
   "dependencies": {
-    "@eschecker/internal-core": "^0.0.2-beta.7"
+    "@eschecker/internal-core": "workspace:^"
   }
 }
