--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "eschecker",
+  "name": "@eschecker/monorepo",
   "version": "0.0.2-beta.13",
   "description": "",
+  "private": "true",
   "main": "index.js",
   "workspaces": [
     "packages/*"
