--- a/.github/workflows/TS-Publish.yml
+++ b/.github/workflows/TS-Publish.yml
@@ -32,7 +32,6 @@ jobs:
       - name: List packages
         run: ls -R packages
       - name: Publish
-        run: |
-          pnpm -r --filter !@eschecker/internal-code publish --access public --no-git-checks 
+        run: pnpm run publish:ts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
