--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:package": "esno ./scripts/build.ts",
     "build:packages": "esno ./scripts/build.ts --all",
     "ci": "bumpp package.json packages/*/package.json --commit --push --tag",
-    "publish:ts": "pnpm -r --filter=!internal-code publish --access public --no-git-checks",
+    "publish:ts": "pnpm -r --filter=!internal-core publish --access public --no-git-checks",
     "test": "ava"
   },
   "keywords": [],
