--- a/.github/workflows/Rust-Publish.yml
+++ b/.github/workflows/Rust-Publish.yml
@@ -108,10 +108,10 @@ jobs:
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
         shell: bash
-      - name: Setup node x86
-        if: matrix.settings.target == 'i686-pc-windows-msvc'
-        run: npm config set supportedArchitectures.cpu "ia32"
-        shell: bash
+      # - name: Setup node x86
+      #   if: matrix.settings.target == 'i686-pc-windows-msvc'
+      #   run: npm config set supportedArchitectures.cpu "ia32"
+      #   shell: bash
       - name: Install dependencies
         run: pnpm install
       - name: Setup node x86
