--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:rs": "pnpm -r --filter=internal-core run build",
     "build:package": "esno ./scripts/build.ts",
     "build:packages": "esno ./scripts/build.ts --all",
-    "ci": "bumpp package.json packages/*/package.json --commit --push --tag",
+    "release": "bumpp package.json packages/*/package.json --commit --push --tag",
     "publish:ts": "pnpm -r --filter=!internal-core publish --access public --no-git-checks",
     "publish:rs": "pnpm -r --filter=internal-core publish --access public --no-git-checks",
     "test": "ava"
