--- a/packages/internal-core/package.json
+++ b/packages/internal-core/package.json
@@ -25,6 +25,20 @@
     "index.js",
     "index.d.ts"
   ],
+  "keywords": [
+    "eschecher",
+    "ecma",
+    "syntax"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hubvue/eschecker.git",
+    "directory": "packages/internal-core"
+  },
+  "bugs": {
+    "url": "https://github.com/hubvue/eschecker/issues"
+  },
+  "homepage": "https://github.com/hubvue/eschecker/tree/main#readme",
   "engines": {
     "node": ">= 10"
   },
