--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@eschecker/monorepo",
   "version": "0.0.2-beta.35",
-  "description": "",
+  "description": "Different versions of the ECMAScript syntax checker.",
   "private": "true",
   "main": "index.js",
   "workspaces": [
@@ -17,8 +17,12 @@
     "publish:rs": "pnpm -r --filter=internal-core publish --access public --no-git-checks",
     "test": "ava"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "eschecher",
+    "ecma",
+    "syntax"
+  ],
+  "author": "hubvue",
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.16.1",
@@ -33,6 +37,5 @@
     "minimist": "^1.2.8",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
-  },
-  "packageManager": "yarn@3.6.0"
+  }
 }
