--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "npm-run-all": "^4.1.5",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "pnpm test"
+    }
   }
 }
