--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bumpp": "^9.1.1",
     "chalk": "^5.2.0",
     "esno": "^0.16.3",
+    "husky": "^8.0.3",
     "inquirer": "^9.2.7",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
